fix(home): padding top header on mobile view

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -116,8 +116,8 @@
     .pt-5{
         padding-top: 1.3rem;
     }
-    .pt-21{
-        padding-top: 5rem;
+    .pt-25{
+        padding-top: 6rem;
     }
     .pl-9{
         padding-left: 1rem;
